2008-02-13  Dan Locks <dwlocks@zmanda.com>
        * packaging/rpm/amanda.spec: added a check for PKG_CONFIG_PATH in the
          build environment as well as if provided on rpmbuild commandline.
          Conditionalized this var to handle cross compiling on FC8.

2008-02-12  Dustin J. Mitchell <dustin@zmanda.com>
	* amandad-src/amandad.c: use sizeof() instead of strlen()
	  in a constant expression

2008-02-12  Dustin J. Mitchell <dustin@zmanda.com>
	* amandad-src/amandad.c: initialize as->service
	* common-src/event.c common-src/event.h: new GMainLoop-based
	  version of the event library, allowing GMainLoop-based and 
	  event-based processes to co-exist peacefully

2008-02-12  Dustin J. Mitchell <dustin@zmanda.com>
	* installcheck/amcheckdump.pl: fix typo

2008-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fail if no header or no data.

2008-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Report failure if dumper succeed and
				  chunker failed.

2008-02-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.h (config_name, config_dir, config_filename):
				 Remove extern declaration.
	* common-src/conffile.h (get_config_name, get_config_dir,
				 get_config_filename): New prototype.
	* common-src/conffile.c (config_name, config_dir, config_filename):
				 Declare static.
	* common-src/conffile.h (get_config_name, get_config_dir,
				 get_config_filename): New functions.
	* perl/Amanda/Config.swg: Don't inline the functions.
	* oldrecover-src/extract_list.c, client-src/sendbackup.c,
	  client-src/sendsize.c, client-src/selfcheck.c,
	  recover-src/amrecover.c, recover-src/extract_list.c,
	  server-src/changer.c, server-src/amlogroll.c,
	  server-src/amindexd.c, server-src/amcheck.c,
	  server-src/dumper.c, server-src/planner.c,
	  server-src/chunker.c, server-src/amadmin.c,
	  server-src/amtape.c, server-src/amcleanupdisk.c,
	  server-src/amflush.c, server-src/amtrmlog.c,