@@ -1,3 +1,8 @@
+2008-02-13  Dustin J. Mitchell <dustin@zmanda.com>
+	* common-src/security-util.c 
+	  common-src/security-util.h: don't cast pointers to
+	  integers for tcp_conn event id's
+
 2008-02-13  Dan Locks <dwlocks@zmanda.com>
         * packaging/rpm/amanda.spec: added a check for PKG_CONFIG_PATH in the
           build environment as well as if provided on rpmbuild commandline.
